--- a/pokeapp/package.json
+++ b/pokeapp/package.json
@@ -27,6 +27,8 @@
     ]
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.19.1",
+    "@tanstack/react-query-devtools": "^4.19.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
